Fix image filename case for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <section id="gallery">
             <h2>Gallery</h2>
             <figure>
-                <img src="https://kaif3788.github.io/Famous-city/images/eiffel.jpg" alt="Eiffel Tower in Paris">
-
+                <img src="images/Eiffel.jpg" alt="Eiffel Tower in Paris">
                 <figcaption>The iconic Eiffel Tower</figcaption>
             </figure>
         </section>
