--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main>
             <!-- Overview Section -->
             <section class="card" id="overview">
-                <h2>Overview</h2>
+                <h2>City Overview</h2>
                 <blockquote cite="https://en.parisinfo.com">
                     <strong>Paris</strong> is the capital and largest city of France, a global center for art, fashion,
                     gastronomy, and culture. It's known for its iconic landmarks like the Eiffel Tower and Notre-Dame
@@ -47,7 +47,7 @@
 
             <!-- Quote Section -->
             <section class="card" id="quote">
-                <h2>Famous Quote</h2>
+                <h2>Words About Paris</h2>
                 <p>
                     <q cite="https://example.com">A walk about Paris will provide lessons in history, beauty, and in the
                         point of Life.</q>
@@ -67,7 +67,7 @@
         <aside>
             <!-- Useful Links -->
             <section class="card" id="links">
-                <h2>Useful Links</h2>
+                <h2>Explore more about Paris</h2>
                 <ul>
                     <li><a href="https://en.wikipedia.org/wiki/Paris" target="_blank">Paris on Wikipedia</a></li>
                     <li><a href="https://www.louvre.fr/en" target="_blank">Louvre Museum</a></li>
@@ -77,7 +77,7 @@
 
             <!-- Facts Table -->
             <section class="card" id="facts">
-                <h2>Paris Facts</h2>
+                <h2>Quick Facts About Paris</h2>
                 <table>
                     <tr>
                         <th>Fact</th>
