--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
             <!-- Video Section -->
             <section class="card" id="video">
-                <h2>Watch Paris</h2>
+                <h2>Watch: Explore Paris</h2>
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/UfEiKK-iX70" title="Paris Video"
                     frameborder="0" allowfullscreen></iframe>
             </section>
@@ -105,16 +105,16 @@
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" placeholder="Your Name" required autofocus>
 
-                    <label for="email">Email:</label>
+                    <label for="email">EMAIL ADDRESS:</label>
                     <input type="email" id="email" name="email" placeholder="you@example.com" required>
 
-                    <label for="reason">Reason:</label>
+                    <label for="reason">REASON FOR CONTACT:</label>
                     <select id="reason" name="reason">
                         <option value="info">More Info</option>
                         <option value="feedback">Feedback</option>
                     </select>
 
-                    <label for="message">Message:</label>
+                    <label for="message">YOUR MESSAGE:</label>
                     <textarea id="message" name="message" rows="4" placeholder="Write your message..."></textarea>
 
                     <button type="submit">Submit</button>
